src/objects/Course_Enrollment__c.object
<CustomObject>
    <description>Represents a connection to a Course Offering.</description>
    <label>Course Connection</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Course Connection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Academic Program that the student or faculty member is associated with.</description>
        <inlineHelpText>The Academic Program that the student or faculty member is associated with.</inlineHelpText>
        <label>Contact&apos;s Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course Connections</relationshipLabel>
        <relationshipName>Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this Contact is affiliated with an Academic Program through an existing Program Enrollment record, and that Program Enrollment is related to this Course Connection, this Affiliation field is auto-populated with the Program Enrollment&apos;s Affiliation. If both conditions aren&apos;t true, then this Affiliation field is left blank.</description>
        <inlineHelpText>The Academic Program associated with this Course Connection. Represents a Contact-Account Affiliation.</inlineHelpText>
        <label>Affiliation</label>
        <referenceTo>Affiliation__c</referenceTo>
        <relationshipLabel>Course Connection</relationshipLabel>
        <relationshipName>Course_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student or faculty member participating in this Course Offering.</description>
        <inlineHelpText>The student or faculty member participating in this Course Offering.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Connections</relationshipLabel>
        <relationshipName>Student_Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Course Offering the student or faculty member is involved with.</description>
        <inlineHelpText>The Course Offering the student or faculty member is involved with.</inlineHelpText>
        <label>Course Offering ID</label>
        <referenceTo>Course_Offering__c</referenceTo>
        <relationshipLabel>Course Connection</relationshipLabel>
        <relationshipName>Course_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credits_Attempted__c</fullName>
        <description>The number of credits the student is trying to earn through this Course Offering.</description>
        <inlineHelpText>The number of credits the student is trying to earn through this Course Offering.</inlineHelpText>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credits_Earned__c</fullName>
        <description>The number of credits the student earned by completing this Course Offering.</description>
        <inlineHelpText>The number of credits the student earned by completing this Course Offering.</inlineHelpText>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>The numeric grade the student earned in this Course Offering.</description>
        <inlineHelpText>The numeric grade the student earned in this Course Offering.</inlineHelpText>
        <label>Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For faculty members, indicates they are the primary faculty (for example, lead instructor) for the Course Offering.</description>
        <inlineHelpText>For faculty members, indicates they are the primary faculty (for example, lead instructor) for the Course Offering.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For students, their primary Program Enrollment. In Higher Ed, this typically represents a student&apos;s academic major.</description>
        <inlineHelpText>For students, their primary Program Enrollment. In Higher Ed, this typically represents a student&apos;s academic major.</inlineHelpText>
        <label>Program Enrollment ID</label>
        <referenceTo>Program_Enrollment__c</referenceTo>
        <relationshipLabel>Course Connections</relationshipLabel>
        <relationshipName>Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates whether this is a current or former Course Connection.</description>
        <inlineHelpText>Indicates whether this is a current or former Course Connection.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>